--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-HeloBelo 
-    Ez egy üzenet
+<h1> Helo Belo </h1>
 </body>
 </html>
